--- a/index.css
+++ b/index.css
@@ -546,51 +546,14 @@ body {
   background: var(--text-color);
 }
 :root {
-  --bg-color: rgb(10, 10, 10);
-  --text-color: #fff;
-  --blog-gray-color: rgb(180, 180, 180);
+  --bg-color: #fff;
+  --text-color: rgb(10, 10, 10);
+  --blog-gray-color: rgb(80, 80, 80);
   --background-image: linear-gradient(
       90deg,
-      rgba(10, 10, 10, 0.3),
-      rgb(10, 10, 10, 1)
+      rgba(10, 10, 10, 0.4),
+      rgb(10, 10, 10, 0.4)
     ),
-    url("https://images.unsplash.com/photo-1591708370135-f2fac858e97b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80");
-  --background-background: linear-gradient(
-      0deg,
-      rgba(10, 10, 10, 1),
-      rgba(10, 10, 10, 0.6)
-    ),
-    url("https://images.unsplash.com/photo-1591708370135-f2fac858e97b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80") center center fixed;
-  --height: 50vh;
-}
-
-#display h1 {
-  -webkit-background-clip: text;
-  background-clip: text;
-  -webkit-text-fill-color: #fff;
-}
-
-#blog-display h1 {
-  -webkit-background-clip: text;
-  background-clip: text;
-  -webkit-text-fill-color: #fff;
-}
-
-.projects section {
-  background: rgb(20, 20, 20);
-}
-
-#blog_section section {
-  background: rgb(20, 20, 20);
-}
-
-@media (max-width: 800px) {
-  :root {
-    --background-image: linear-gradient(
-        0deg,
-        rgba(10, 10, 10, 1),
-        rgba(10, 10, 10, 0)
-      ),
-      url("https://images.unsplash.com/photo-1591708370135-f2fac858e97b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80") !important;
-  }
+    url("https://images.unsplash.com/photo-1558945707-00cd1e3ec7c1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=890&q=80");
+  --background-background: #fff;
 }
